discussion/kv_engine/124508/124508_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-16181: Minor refactor of collection insert into vb filter

Remove repeated code in favour or an insert method

Change-Id: I24e17efe320b66fd9fcbcc02fd146623eb9ba24e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-03-30 12:46:47.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2020-03-30 12:47:32.000000000
Message: 
Topic set to collections
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-03-30 13:04:00.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10681/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27183/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\collections\vbucket_filter.cc(206): error C3867: "CollectionID::isDefaultCollection": non-standard syntax; use "&" to create a pointer to member ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27183/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23244/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/collections/vbucket_filter.cc:206:13:
error: reference to non-static member function must be called; did you mean to call it with no arguments?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23244/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1427/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/collections/vbucket_filter.cc:206:13: error: reference to non-static member function must be called; did you mean to call it with no arguments? [clang-diagnostic-error]
    if (cid.isDefaultCollection) {
            ^
                               ()

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1427/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/collections/vbucket_filter.cc:206:13:
error: reference to non-static member function must be called; did you mean to call it with no arguments? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1427/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/2822/ : FAILURE

Compile error at [2020-03-30T12:49:19.515Z] ../kv_engine/engines/ep/src/collections/vbucket_filter.cc:206:32:
error: cannot convert ?CollectionID::isDefaultCollection? from type ?bool (CollectionID::)() const? to type ?bool?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/2822/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/2825/ : FAILURE

Compile error at [2020-03-30T12:57:56.310Z] ../kv_engine/engines/ep/src/collections/vbucket_filter.cc:206:32:
error: cannot convert ?CollectionID::isDefaultCollection? from type ?bool (CollectionID::)() const? to type ?bool?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/2825/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/2874/ : FAILURE

Compile error at [2020-03-30T12:54:26.511Z] ../kv_engine/engines/ep/src/collections/vbucket_filter.cc:206:32:
error: cannot convert ?CollectionID::isDefaultCollection? from type ?bool (CollectionID::)() const? to type ?bool?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/2874/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/1873/ : FAILURE

Compile error at [2020-03-30T12:48:51.820Z] ../kv_engine/engines/ep/src/collections/vbucket_filter.cc:206:13:
error: reference to non-static member function must be called; did you mean to call it with no arguments?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/1873/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format/25543/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
